--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
       <div class="product-display">
         <div class="product-container">
           <div class="product-image">
-            <img v-bind:src="image">
+            <img :src="image">
           </div>
           <div class="product-info">
-            <h1>{{ product }}</h1>
+            <h1>{{ title }}</h1>
+            <h4>{{ sale }}</h4>
             <p v-if="inStock">In Stock</p>
             <p v-else>Out of Stock</p>
             <ul>
@@ -28,12 +29,15 @@
             </ul>
 
             <div 
-              v-for="variant in variants" 
+            class="color-circle"
+            :style="{backgroundColor: variant.color}"
+              v-for="(variant, index) in variants" 
               :key="variant.id" 
-              @mouseover="updateImage(variant.image)" 
-            >{{ variant.color }}</div>
+              @mouseover="updateVariant(index)" 
+            ></div>
             <button class="button" @click="addToCart">Add to Cart</button>
           </div>
+
         </div>
       </div>
     </div>
