--- a/index.html
+++ b/index.html
@@ -17,10 +17,14 @@
       <div class="product-display">
         <div class="product-container">
           <div class="product-image">
-            <img v-bind:src="image">
+            <img :src="image">
           </div>
           <div class="product-info">
             <h1>{{ title }}</h1>
+            <div id="example">
+              <p>Изначальное сообщение: «{{ message }}»</p>
+              <p>Сообщение задом наперёд: «{{ reversedMessage }}»</p>
+            </div>
             <!-- solution -->
             <p>{{ sale }}</p>
             <!-- solution -->
@@ -38,7 +42,8 @@
               :style="{ backgroundColor: variant.color }">
             </div>
             
-            <button class="button" :class="{ disabledButton: !inStock }" :disabled="!inStock" v-on:click="addToCart">Add to Cart</button>
+            <button class="button" :class="{ disabledButton: !inStock }"
+             :disabled="!inStock" v-on:click="addToCart">Add to Cart</button>
           </div>
         </div>
       </div>
